--- a/ML_notebook_Diego.ipynb
+++ b/ML_notebook_Diego.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -21,9 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -46,20 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading 100 images\n",
-      "satImage_042.png\n",
-      "Loading 100 images\n",
-      "satImage_042.png\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# Loaded a set of images\n",
     "root_dir = \"training/\"\n",
@@ -81,38 +72,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "class DatasetUNet(tc.utils.data.Dataset):\n",
-    "    def __init__(self, root_dir):\n",
-    "        self.image_dir + root_dir + \"images/\"\n",
+    "    def __init__(self, root_dir, bound=None, do_prep=False, do_flip = False,\n",
+    "                 normalize = False, noise=False, is_simple_noise=False, rot = False):\n",
+    "        self.image_dir = root_dir + \"images/\"\n",
     "        self.files = os.listdir(self.image_dir)\n",
     "        self.gt_dir = root_dir + \"groundtruth/\"\n",
+    "        self.do_prep = do_prep\n",
+    "        self.do_flip = do_flip\n",
+    "        self.normalize = normalize\n",
+    "        self.noise = noise\n",
+    "        self.is_simple_noise = is_simple_noise\n",
+    "        self.rot = rot\n",
+    "        if bound!=None:\n",
+    "            del self.files[0:bound[0]]\n",
+    "            del self.files[bound[1]:]\n",
     "    \n",
     "    def __len__(self):\n",
-    "        return len(self.files)\n",
+    "        return len(self.files)*(1+3*self.rot)*(1+1*noise)*(1+1*do_flip)\n",
     "    \n",
-    "    def "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset,label = rotation(imgs, gt_imgs)\n",
-    "dataset = preprocessing_for_UNet(dataset)\n",
-    "dataset,label = flip(dataset,label)\n",
-    "dataset = from_list_to_tensor(dataset)\n",
-    "label = from_list_to_tensor(dataset)\n",
+    "    def __getitem__(self, index):\n",
+    "        image = load_image(self.image_dir + self.files[index])\n",
+    "        gt_image = load_image(self.gt_dir + self.files[index])\n",
+    "        if self.do_prep:\n",
+    "            _, laplacian_image = add_laplacian(image)\n",
+    "            sobel = add_sobel(image)\n",
+    "            segment = add_segment(image)\n",
+    "            image=np.concatenate((image,laplacian_image,sobel,segment),axis = 2)\n",
+    "        image,gt_image=[image],[gt_image]\n",
+    "        if rot:\n",
+    "            image,gt_image = rotation(image,gt_image)\n",
+    "        if self.do_flip:\n",
+    "            image,gt_image = flip(image,gt_image)\n",
+    "            \n",
+    "        image,gt_image = self.from_list_to_tensor(image), self.from_list_to_tensor(gt_image)\n",
+    "        \n",
+    "        if normalize:\n",
+    "            image = (image - image.mean())/image.std()\n",
+    "        \n",
+    "        if self.noise:\n",
+    "            image,gt_image = self.add_noise(image, gt_image, is_simple=self.is_simple_noise)\n",
+    "        \n",
+    "        return image,gt_image\n",
+    "    \n",
+    "    def from_list_to_tensor(self,dataset):\n",
+    "        ''' cast a list of image in a tensor of appropriate size'''\n",
+    "        dataset = np.array(dataset)\n",
+    "        try :\n",
+    "            N,rows,columns,features = dataset.shape\n",
+    "        except:\n",
+    "            N,rows,columns = dataset.shape\n",
+    "            features=1\n",
+    "            dataset=dataset.reshape(N,rows,columns,features)\n",
     "\n",
-    "dataset = tc.utils.data.TensorDataset(dataset,label)\n",
-    "dataset = tc.utils.data.DataLoader(dataset)"
+    "        dataset_tensor = tc.Tensor(N, features, rows, columns)\n",
+    "        for j in range(N):\n",
+    "            dataset_tensor[j] = tc.tensor(np.array([dataset[j,:,:,i] for i in range(features)]))\n",
+    "\n",
+    "\n",
+    "        return dataset_tensor\n",
+    "        \n",
+    "    def add_noise(self, dataset,label, is_simple=True):\n",
+    "        '''Add noise to the dataset.\n",
+    "\n",
+    "        dataset : tensor type\n",
+    "\n",
+    "        label : tensor type'''\n",
+    "\n",
+    "\n",
+    "        if is_simple:\n",
+    "\n",
+    "            mean, std = dataset.mean(), dataset.std()\n",
+    "            # the noise has the 20% of the image standard deviation\n",
+    "            noise = np.random.normal(loc = mean, scale = std/5, size = dataset.size())\n",
+    "\n",
+    "\n",
+    "            dataset_with_noise = dataset + tc.tensor(noise).type(tc.FloatTensor)\n",
+    "            dataset = tc.cat((dataset,dataset_with_noise),dim = 0)\n",
+    "            label = label.type(tc.FloatTensor)\n",
+    "            label = tc.cat((label, label), dim = 0)\n",
+    "        else:\n",
+    "\n",
+    "            mean, std = 0, 0.05\n",
+    "\n",
+    "            noise = np.random.normal(mean, std, size = label.size())\n",
+    "\n",
+    "            label.type(float)\n",
+    "\n",
+    "            label_with_noise = label + tc.tensor(noise).type(tc.FloatTensor)\n",
+    "\n",
+    "            label = tc.cat((label,label_with_noise),dim=0)\n",
+    "\n",
+    "            dataset = tc.cat((dataset,dataset),dim=0)\n",
+    "\n",
+    "        return dataset, label\n",
+    "\n"
    ]
   },
   {
@@ -147,17 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of imgages: 400\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# augment the dataset adding rotated images\n",
     "imgs, gt_imgs = rotation(imgs, gt_imgs)\n",
@@ -173,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -268,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -288,55 +342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def add_noise(dataset,label, is_simple=True):\n",
-    "    '''Add noise to the dataset.\n",
-    "    \n",
-    "    dataset : tensor type\n",
-    "    \n",
-    "    label : tensor type'''\n",
-    "    \n",
-    "    \n",
-    "    if is_simple:\n",
-    "        \n",
-    "        mean, std = dataset.mean(), dataset.std()\n",
-    "        # the noise has the 20% of the image standard deviation\n",
-    "        noise = np.random.normal(loc = mean, scale = std/5, size = dataset.size())\n",
-    "        \n",
-    "\n",
-    "        dataset_with_noise = dataset + tc.tensor(noise).type(tc.FloatTensor)\n",
-    "        dataset = tc.cat((dataset,dataset_with_noise),dim = 0)\n",
-    "        label = label.type(tc.FloatTensor)\n",
-    "        label = tc.cat((label, label), dim = 0)\n",
-    "    else:\n",
-    "        \n",
-    "        mean, std = 0, 0.05\n",
-    "        \n",
-    "        noise = np.random.normal(mean, std, size = label.size())\n",
-    "        \n",
-    "        label.type(float)\n",
-    "        \n",
-    "        label_with_noise = label + tc.tensor(noise).type(tc.FloatTensor)\n",
-    "        \n",
-    "        label = tc.cat((label,label_with_noise),dim=0)\n",
-    "        \n",
-    "        dataset = tc.cat((dataset,dataset),dim=0)\n",
-    "    \n",
-    "    return dataset, label\n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "    "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -371,36 +386,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def train_UNet(dataset, label, lr, max_epochs, mini_batch_size, nb_test, threshold=0.5, \n",
+    "def train_UNet(trainig_directory, lr, max_epochs, mini_batch_size, nb_test, threshold=0.5, \n",
     "               do_preprocessing = False, flip_data=True, model=None):\n",
     "    ''' train the UNet using the Binary Cross Entropy loss and Adam as optimizer.\n",
     "    The dataset must be a list of 400*400 images.'''\n",
     "    \n",
-    "    if flip_data: \n",
-    "        dataset,label = flip(dataset,label)\n",
-    "    \n",
-    "    if do_preprocessing:\n",
-    "        dataset = preprocessing_for_UNet(dataset)\n",
-    "    \n",
-    "    \n",
-    "    dataset = from_list_to_tensor(dataset)\n",
-    "    mean = dataset.mean()\n",
-    "    std = dataset.std()\n",
-    "    dataset = (dataset - mean)/ std\n",
-    "    test= dataset.narrow(0,dataset.size(0)-nb_test,nb_test)\n",
-    "    dataset = dataset.narrow(0,0,dataset.size(0)-nb_test)\n",
-    "    label = from_list_to_tensor(label)\n",
-    "    test_l = label.narrow(0,dataset.size(0),nb_test)\n",
-    "    label = label.narrow(0,0,dataset.size(0))\n",
-    "    \n",
-    "    ## add is_simple = False to add noise to labels\n",
-    "    dataset, label = add_noise(dataset, label)\n",
+    "    dataset = DatasetUNet(training_directory, bound=(0,nb_test) ,do_flip=flip_data,\n",
+    "                          do_prep= do_preprocessing,\n",
+    "                          noise=True, is_simple_noise = True, rot = True, normalize = True)\n",
+    "    N = dataset.__len__()\n",
+    "    test_set = DatasetUNet(training_directory, bound=(nb_test,N) ,do_flip=False,\n",
+    "                           do_prep= False,\n",
+    "                           noise=False, is_simple_noise = False, rot = False, normalize = True)\n",
+    "    train_load = tc.utils.data.DataLoader(dataset,batch_size= mini_batch_size)\n",
+    "    test_load = tc.utils.data.DataLoader(test_set,batch_size=nb_test)\n",
     "    if model == None:\n",
     "        model = UNet(features= dataset.size(1))\n",
     "    \n",
@@ -415,7 +420,6 @@
     "        print('cuda is available')\n",
     "        model.cuda()\n",
     "        #criterion.cuda()\n",
-    "        test = test.cuda()\n",
     "        #dataset= dataset.cuda()\n",
     "        #label = label.cuda()\n",
     "    \n",
@@ -425,9 +429,7 @@
     "        model.train()\n",
     "        #if tc.cuda.is_available():\n",
     "        #    model.cuda()\n",
-    "        for j in range(0,dataset.size(0)-nb_test,mini_batch_size):\n",
-    "            input_data = dataset.narrow(0,j,mini_batch_size)\n",
-    "            label_data = label.narrow(0,j,mini_batch_size)\n",
+    "        for input_data, label_data in train_load:\n",
     "            if tc.cuda.is_available():\n",
     "                input_data, label_data = input_data.cuda(), label_data.cuda()\n",
     "            output = model(input_data)\n",
@@ -442,17 +444,19 @@
     "        # compute training error\n",
     "        model.eval()\n",
     "        losses.append(loss)\n",
-    "        prediction = model(test)\n",
-    "        prediction = prediction.cpu()\n",
-    "        prediction = prediction.detach_().numpy()[:,0,:,:]\n",
-    "        prediction = (prediction > threshold)*1\n",
-    "        #print(prediction[0])\n",
-    "        mask = test_l.numpy()[:,0,:,:]\n",
-    "        F1_error = 0\n",
-    "        #print(mask.shape)\n",
-    "        training_error = (((mask>0.5)*1 == prediction)*1).sum()/np.prod(prediction.shape)\n",
-    "        \n",
-    "        training_errors.append(training_error)\n",
+    "        for test,mask in test_load:\n",
+    "            prediction = model(test)\n",
+    "            prediction = prediction.cpu()\n",
+    "            prediction = prediction.detach_().numpy()[:,0,:,:]\n",
+    "            prediction = (prediction > threshold)*1\n",
+    "            #print(prediction[0])\n",
+    "            mask = test_l.numpy()[:,0,:,:]\n",
+    "            F1_error = 0\n",
+    "            #print(mask.shape)\n",
+    "            training_error = (((mask>0.5)*1 == prediction)*1).sum()/np.prod(prediction.shape)\n",
+    "\n",
+    "            training_errors.append(training_error)\n",
+    "            break\n",
     "        \n",
     "        \n",
     "        # improve the calcul_F1 fonction to optimize the code\n",
@@ -542,30 +546,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "let's start to train the Net\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "$ Torch: not enough memory: you tried to allocate 4GB. Buy new RAM! at /opt/conda/conda-bld/pytorch_1544081127912/work/aten/src/TH/THGeneral.cpp:201",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-1aac65d1b9f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'let\\'s start to train the Net'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_UNet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_imgs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_mask\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_epochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmini_batch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnb_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdo_preprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-9-d39c7e240d81>\u001b[0m in \u001b[0;36mtrain_UNet\u001b[0;34m(dataset, label, lr, max_epochs, mini_batch_size, nb_test, threshold, do_preprocessing, flip_data, model)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;31m## add is_simple = False to add noise to labels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madd_noise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mUNet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-47877d6ee094>\u001b[0m in \u001b[0;36madd_noise\u001b[0;34m(dataset, label, is_simple)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0mdataset_with_noise\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnoise\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFloatTensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdataset_with_noise\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFloatTensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: $ Torch: not enough memory: you tried to allocate 4GB. Buy new RAM! at /opt/conda/conda-bld/pytorch_1544081127912/work/aten/src/TH/THGeneral.cpp:201"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "N = len(imgs)\n",
     "n = N\n",
@@ -607,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -619,7 +604,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# test on a image\n",
@@ -716,7 +703,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "create_submission_UNet(imgs_test, model, 'third_submission.csv', do_preprocessing= True)"
@@ -1079,7 +1068,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
